# python_services

./: .gitignore
calculadora-tokens-gpt/: README.md  app_calculadora_tokens.py
calculadora-tokens-gpt/public/: index.html
form-analizer-service/: app - Copy.py  app.py  bizzcloud_form-analiser-service_python.bat  main.py  requirements.txt
form-analizer-service/verticals/: bizzfront.txt
intent-miner-service/: README.md  bizzcloud_intent_miner_service_python.bat  intent_classifier_local.py  intent_classifier_local_v2.py  pyproject.toml  requirements.txt  train_index.py
intent-miner-service/intent-miner-service/: bizzcloud_intent_miner_service_python.bat  inspect_ctx.py  intent_classifier_local.py  local_llm.py  train_index.py
intent-miner-service/intent-miner-service/verticals/: bizzfront.txt  bsglobalservices.json
intent-miner-service/knowledge/: extension-funcionalidad-inten-miner-service.MD
intent-miner-service/verticals/: asst_gAHuYBCj1V4HqjFvwAwHp9Td.json  asst_weGC8FYIv4zElZkiVzf1xciQ.json
pii-flan-service/: bizzcloud_piiFlanService_python.bat  main.py  pii_service.py
