[project]
name = "intent-miner-service"
version = "0.1.0"
description = "Servicio de clasificación de intenciones con FastAPI"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "sentence-transformers>=3.0.0",
  "torch>=2.3.0",
  "llama-cpp-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.uv]
package = false

